# deltabench

./: README.md  pyproject.toml
adapters/: __init__.py
adapters/cli/: __init__.py  commands.py
adapters/codex/: __init__.py  action_packet.py  benchmark_packet.py  context_pack.py  review_packet.py
core/: __init__.py  change_writer.py  dependency_mapper.py  diff_loader.py  repo_mapper.py
derive/: __init__.py  blast_radius.py  change_classifier.py  change_significance.py  evidence_labels.py  hotspot_overlap.py  review_map.py  review_priority.py  risk_ranker.py  runtime_relevance.py  summary_builder.py
docs/: deltabench_design.md  deltabench_identity_status.md  terminology.md
evidence/: __init__.py
evidence/loaders/: __init__.py  diff_loader.py  evidence_loader.py
evidence/schemas/: __init__.py  diff_schema.py  impact_schema.py  review_schema.py
evidence/store/: __init__.py  artifact_store.py  sqlite_store.py
governance/: __init__.py  compression_rules.py  semantic_rules.py
reports/: __init__.py  json_exporter.py  markdown_exporter.py
tests/: test_bench_handoff.py  test_benchmark_packet.py  test_canonical_flow.py  test_context_compression.py  test_diff_loader.py  test_hotspot_overlap.py  test_review_map.py  test_review_packet.py  test_risk_ranker.py  test_semantic_producers.py
tools/: bench_handoff.py  chain_artifact.py
