[project]
name = "deltabench"
version = "0.1.0"
description = "Evidence-first change risk workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deltabench = "adapters.cli.commands:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
